[tool.poetry]
name = "dwgill-webhooks"
version = "0.1.0"
description = "Personal server & python tinkering playground for Daniel Gill"
authors = ["Daniel Gill <dwgill@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.28"}
aiosqlite = "^0.20.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlmodel = "^0.0.16"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
cryptography = "^42.0.5"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
